# marto

./: CMakeLists.txt  Dockerfile  IncDirList.txt  MartoConfig.cmake  add_sub_quire.cpp  decoded_to_product.cpp  dump  merge_headers.cmake  posit_decoder.cpp  posit_mul.cpp  quire_to_posit.cpp  readme.md
archgenlib/: CMakeLists.txt
archgenlib/examples/: CMakeLists.txt
archgenlib/examples/src/: fixedpoint_operators.cpp  hello_world.cpp  sycl_lns.cpp  test_expr.cpp  test_func_table.cpp  test_literal.cpp  test_lns.cpp  test_lns_lf.cpp  test_mul_pi.cpp  test_sin.cpp  test_sin_mp.cpp  test_sycl_mlir.cpp  test_vitis.cpp  test_wave_gen.cpp  test_wave_gen.ipp  test_wave_gen_16bits.cpp  test_wave_gen_22bits.cpp  test_wave_gen_6bits.cpp  test_wave_gen_8bits.cpp  test_wave_gen_float.cpp  test_wave_gen_high_prec.cpp  test_wave_gen_low_prec.cpp  test_wave_gen_uhp.cpp
archgenlib/include/: sollya_handler.hpp
archgenlib/include/fixedpoint/: constants.hpp  evaluate.hpp  evaluator.hpp  expression.hpp  expression_rt_tree.hpp  expression_types.hpp  fixedpoint.hpp  functions.hpp  header_gen_evaluator.hpp  internal_helper.hpp  literal.hpp  multiplication.hpp  operations.hpp  operators.def  operators.hpp  output_formatter.hpp  plugin_gen_evaluator.hpp  sum.hpp
archgenlib/include/fixedpoint/operators/: table.hpp  tabled_expr.hpp  value_getter.hpp
archgenlib/include/runtime/: expression_tree.hpp  fixfunction_multipartite.hpp  mpfr_handler.hpp  output_formatter.hpp  poly_approx.hpp  sollya_fix_function.hpp  sollya_handler.hpp  sollya_operation.hpp  utility.hpp
archgenlib/include/runtime/operator_builder/: affectation.hpp  multipartite_operator.hpp  operator.hpp  table_builder.hpp  value_getter.hpp
archgenlib/src/: evaluator.cpp  expression_rt_tree.cpp  expression_tree.cpp  fixfunction_multipartite.cpp  mpfr_handler.cpp  operators.cpp  output_formatter.cpp  poly_approx.cpp  sollya_fix_function.cpp  sollya_handler.cpp  sollya_operation.cpp  utility.cpp
cmake/: FindGMP.cmake  FindGMPXX.cmake  FindMPFI.cmake  FindMPFR.cmake  FindSollya.cmake
include/floatingpoint/: expression.hpp  fp_number.hpp  product.hpp  sum.hpp
include/ieeefloats/: ieee_adder.hpp  ieee_expr.hpp  ieee_multiplier.hpp  ieee_rounding.hpp  ieeetype.hpp
include/kulisch/: K1.hpp  K3.hpp  acc_rounding.hpp  fp_exact_prod.hpp  kulisch_dim.hpp
include/posit/: add_sub_quire.hpp  conversions.ipp  posit_add.hpp  posit_decoder.hpp  posit_dim.hpp  posit_encoder.hpp  posit_in_place_round.hpp  posit_mul.hpp  quire_to_posit.hpp  value_prod_conversions.hpp
includes/: K1.hpp  K3.hpp  acc_rounding.hpp  add_sub_quire.hpp  conversions.inc  decoded_to_product.hpp  fp_exact_prod.hpp  kulisch_acc.hpp  kulisch_dim.hpp  lzoc_shifter.hpp  posit_add.hpp  posit_decoder.hpp  posit_dim.hpp  posit_encoder.hpp  posit_mul.hpp  quire_to_posit.hpp  shifter.hpp  shifter_sticky.hpp  static_math.hpp  utils.hpp  value_prod_conversions.hpp
includes/bitvector/: list.txt  lzoc_shifter.hpp  shifter.hpp  shifter_marto.hpp  shifter_sticky.hpp
includes/ieeefloats/: ieee_adder.hpp  ieee_adder_sortexp.hpp  ieee_multiplier.hpp  ieee_rounding.hpp  ieeetype.hpp  list.txt
includes/kulisch/: K1.hpp  K3.hpp  acc_rounding.hpp  fp_exact_prod.hpp  kulisch_dim.hpp  list.txt
includes/posit/: add_sub_quire.hpp  conversions.inc  conversions.ipp  list.txt  posit_add.hpp  posit_decoder.hpp  posit_dim.hpp  posit_encoder.hpp  posit_in_place_round.hpp  posit_mul.hpp  quire_to_posit.hpp  value_prod_conversions.hpp
includes/tools/: list.txt  static_math.hpp  utils.hpp
libnumform/: CMakeLists.txt
libnumform/numeric_formats/: ieee_number.hpp  ieee_number.tpp  ieee_small.hpp
src/: add_sub_quire.cpp  posit_add.cpp  posit_decoder.cpp  posit_encoder.cpp  posit_mul.cpp  quire_to_posit.cpp  value_prod_conversions.cpp
testdata/ieeeadder/: test_WE3_WF4.input
tests/: CMakeLists.txt  ieee_adder.cpp  testArithmeticOp.cpp  testConversionPosit.cpp  testConvert.cpp  testExprIEEEConvert.cpp  testExprProduct.cpp  testExprRounding.cpp  testExprSum.cpp  testExpression.cpp  testIEEEAdder.cpp  testIEEEAdderGMP.cpp  testIEEEMultiplier.cpp  testKulisch.cpp  testLibNumForm.cpp
tests/src/: ieee_adder.cpp  testArithmeticOp.cpp  testConvert.cpp  testExprIEEEConvert.cpp  testExprProduct.cpp  testExprRounding.cpp  testExprSum.cpp  testExpression.cpp  testIEEEAdder.cpp  testIEEEMultiplier.cpp
